fix: fa icon globe
Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

--- a/templates/bundles/SyliusShopBundle/Menu/_localeSwitch.html.twig
+++ b/templates/bundles/SyliusShopBundle/Menu/_localeSwitch.html.twig
@@ -1,7 +1,7 @@
 {% if locales|length > 1 %}
     <div class="dropdown z-[101]" {{ sylius_test_html_attribute('locale-selector') }}>
         <div tabindex="0" role="button" class="link link-hover" {{ sylius_test_html_attribute('active-locale') }}>
-            <i class="fa-regular fa-globe"></i>
+            <i class="fa-solid fa-globe"></i>
             {{ active|sylius_locale_country }}
             <svg width="12px" height="12px" class="h-2 w-2 fill-current opacity-60 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2048 2048"><path d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"></path></svg>
         </div>
