--- a/templates/bundles/SyliusShopBundle/Account/dashboard.html.twig
+++ b/templates/bundles/SyliusShopBundle/Account/dashboard.html.twig
@@ -23,7 +23,7 @@
     <div class="mb-5" {{ sylius_test_html_attribute('customer-information') }}>
 
         <div class="bg-base text-base-content shadow-2xl ring-offset-base p-5 lg:p-10">
-            <strong class="heading heading-4 pb-3">{{ customer.fullName }}</strong>
+            <p class="heading heading-4 pb-3">{{ customer.fullName }}</p>
 
             <div class="flex flex-col md:flex-row md:flex-wrap gap-2 lg:gap-4 mt-5">
                 <div class="flex flex-col" style="flex: 1">
