fix(perf): accesibility dark and adeliom theme + webp

--- a/templates/bundles/SyliusShopBundle/Layout/Footer/Grid/_plus.html.twig
+++ b/templates/bundles/SyliusShopBundle/Layout/Footer/Grid/_plus.html.twig
@@ -5,7 +5,7 @@
 		</h3>
 		<a href="https://sylius.com/plus" aria-label="Check Sylius Plus out!" target="_blank" class="link link-hover flex flex-col gap-2">
 			<p>Check Sylius Plus out!</p>
-			<img class="max-w-44 " src="{{ asset('themes/tailwind-theme/images/sylius-plus.png', 'tailwindTheme') }}" alt="Sylius Plus">
+			<img class="max-w-44 " src="{{ asset('themes/tailwind-theme/images/sylius-plus.webp', 'tailwindTheme') }}" alt="Sylius Plus">
 		</a>
 	</div>
 </div>
