--- a/templates/bundles/SyliusShopBundle/layout.html.twig
+++ b/templates/bundles/SyliusShopBundle/layout.html.twig
@@ -33,7 +33,33 @@
 		{% block top %}
 			<nav class="w-full flex lg:items-center justify-center bg-primary text-primary-content">
 				<div class="container flex flex-col gap-6 lg:items-center justify-between py-4 lg:flex-row md:py-2">
-					<a href="#" class="font-semibold text-sm">{{ 'sylius.top_bar'|trans }}</a>
+					<a href="#" class="font-semibold text-sm" onclick="newsletter_modal.showModal()">{{ 'sylius.top_bar'|trans }}</a>
+					<dialog id="newsletter_modal" class="modal">
+					<div class="modal-backdrop text-white absolute top-10 right-10 md:top-20 md:right-20 cursor-pointer">
+						<i class="fa-solid fa-xmark"></i>
+					</div>
+					<div class="modal-box bg-base text-base-content">
+						<h2 class="mb-8 heading-4">{{ 'sylius.homepage.newsletter'|trans }}</h2>
+						<p class="text-sm md:text-lg text-base-content mb-8">{{ 'sylius.homepage.newsletter_description'|trans|raw }}</p>
+
+						<form class="flex flex-wrap sm:flex-nowrap gap-3">
+							<div class="form-control w-full">
+								<div class="form-input">
+									<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 16 16" fill="currentColor" class="w-4 h-4 opacity-70"><path d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z"/><path d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z"/></svg>
+									<input type="text" placeholder="{{ 'sylius.ui.email'|trans }}">
+								</div>
+							</div>
+
+							<button class="btn btn-outline flex-1">
+								{{ 'sylius.homepage.subscribe'|trans }}
+							</button>
+						</form>
+					</div>
+					<form method="dialog" class="modal-backdrop">
+						<button>close</button>
+					</form>
+					</dialog>
+
 					<div class="flex max-sm:flex-wrap flex-1 w-full gap-6 items-center min-sm:justify-between lg:justify-end">
 						{% include '@SyliusShop/Layout/Topbar/_themeSwitcher.html.twig' %}
 						{{ sylius_template_event('sylius.shop.layout.topbar') }}
