--- a/templates/bundles/SyliusShopBundle/Common/Order/_summary.html.twig
+++ b/templates/bundles/SyliusShopBundle/Common/Order/_summary.html.twig
@@ -6,12 +6,10 @@
     <div class="col-span-full mb-5">
         {% include '@SyliusShop/Common/Order/_table.html.twig' %}
     </div>
-    <div class="col-span-full">
-        <div class="mb-4" id="sylius-payments">
-            {% include '@SyliusShop/Common/Order/_payments.html.twig' %}
-        </div>
-        <div class="mb-4" id="sylius-shipments">
-            {% include '@SyliusShop/Common/Order/_shipments.html.twig' %}
-        </div>
+    <div class="col-span-full md:col-span-6 mb-4" id="sylius-payments">
+        {% include '@SyliusShop/Common/Order/_payments.html.twig' %}
+    </div>
+    <div class="col-span-full md:col-span-6 mb-4" id="sylius-shipments">
+        {% include '@SyliusShop/Common/Order/_shipments.html.twig' %}
     </div>
 </div>
