--- a/templates/bundles/SyliusShopBundle/Account/Order/Show/_header.html.twig
+++ b/templates/bundles/SyliusShopBundle/Account/Order/Show/_header.html.twig
@@ -1,5 +1,7 @@
 {% import '@SyliusUi/Macro/flags.html.twig' as flags %}
 
+{% import '@SyliusShop/Common/Macro/buttons.html.twig' as buttons %}
+
 {% import '@SyliusShop/Common/Macro/headers.html.twig' as headers %}
 
 {{ headers.default('sylius.ui.order'|trans ~ ' #' ~ order.number) }}
@@ -23,4 +25,3 @@
 {% if order.paymentState in ['awaiting_payment'] %}
     <a href="{{ path('sylius_shop_order_show', {'tokenValue': order.tokenValue}) }}" class="btn btn-primary my-3">{{ 'sylius.ui.pay'|trans }}</a>
 {% endif %}
- 
